# mlops2025

lesson2/seminar/step4_ge_validation_data/: .pre-commit-config.yaml  dvc.yaml  pyproject.toml
lesson2/seminar/step4_ge_validation_data/src/: evaluate.py  validate_model.py
