[project]
name = "lesson2-hw"
version = "0.1.0"
description = "MLOps first homework"
authors = [
    {name = "Alexey"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pandas (<3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "great-expectations (>=1.15.0,<2.0.0)",
    "mlflow (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
